# Nutrition-App

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.phase5c4.yml  docker-compose.yml
apps/backend/: .env.example  alembic-control.ini  alembic.ini  phase5c-performance-t0-optimized.json  phase5c-performance-t0-requalified.json  phase5c-performance-t0.json  pyproject.toml
apps/backend/app/: main.py
apps/backend/scripts/: audit_recipe_retention.py  bridge_historical_recipes.py  capture_phase5c_database_identity.py  capture_recipe_publication_revisions.py  create_phase5c_operator_attestation.py  establish_phase5c_clone_marker.py  execute_historical_recipe_conversion.py  inventory_historical_database.py  manage_phase5c4_control_roles.py  manage_phase5c4_roles.py  manage_phase5c_promotion.py  plan_historical_recipe_conversion.py  qualify_phase5c_performance.py  verify_historical_recipe_conversion.py  verify_stage2_postgres.py  verify_stage3_postgres.py
apps/backend/tests/: conftest.py  postgres_test_support.py  test_aggregation.py  test_alembic_schema_authority.py  test_create_operation_idempotency.py  test_cross_user_ownership.py  test_food_discovery.py  test_food_recipe_serving_integrity.py  test_graph_restart_idempotency_postgres.py  test_historical_database_inventory_cli.py  test_historical_database_inventory_postgres.py  test_legacy_recipe_migration_safety_postgres.py  test_log_concurrency_postgres.py  test_log_idempotency.py  test_nutrient_catalog.py  test_nutrition_resolution.py  test_ocr_confirmation.py  test_ocr_parser.py  test_ocr_parser_api.py  test_ocr_parser_golden.py  test_phase5c4_admission.py  test_phase5c4_contracts.py  test_phase5c4_control_cli.py  test_phase5c4_control_contracts.py  test_phase5c4_control_hardening_unit.py  (+39 more)
(+331 files in other folders)
