[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "minio>=7.2.20,<7.3",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5,<3",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "postgres_concurrency: requires a reachable PostgreSQL database",
  "phase5c_performance_t0: explicitly runs the full T0 performance fixture",
  "phase5c4_control_postgres: requires an isolated PostgreSQL 16 control database",
  "phase5c4_minio: requires a disposable object-lock-enabled MinIO server",
  "phase5c4_docker_integration: requires Docker control-plane infrastructure",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
